spacing issue fixed regarding about section

--- a/style.css
+++ b/style.css
@@ -402,6 +402,7 @@ p{
   }
   h2{
     font-size: 32px;
+    padding-top: 5%;
   }
  .card p {
   font-size: 16px;
